<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">n Pe</string>
    <string name="title_activity_dashboard">Dashboard Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>
    <string name="downloading">Downloading</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">NICT Bills</string>
    <string name="slide_1_desc">You can pay &amp; check your last electricity bill easily</string>
    <string name="slide_2_title">0% Charges</string>
    <string name="slide_2_desc">Pay your electricity bill online with UPI at 0% charges</string>
    <string name="slide_3_title">Electricity Bills</string>
    <string name="slide_3_desc">View your current electricity bills with details.</string>
    <string name="slide_4_title">Online Pay</string>
    <string name="slide_4_desc">Choose from various payment options</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="retry">RETRY</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout</string>
    <string name="are_you_sure_you_want_to_back">Are you sure you want to back</string>
    <string name="exit_yes">Yes</string>
    <string name="exit_no">No</string>
    <string name="open_it_in_google_play_store">NICT Bills  (Open it in Google Play Store to Download the Application)</string>
    <string name="loading">Loading....</string>
    <string name="one_moment_please">One moment please</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="unable_to_connect_to_server">Unable to connect to the server</string>
    <string name="login_again">Login Again</string>
    <string name="something_went_wrong_please_try_again_later">Something went wrong please try again later</string>
    <string name="phr_address_already_exists_try_another">PHR-Address already exists try another PHR-Address</string>
    <string name="please_enter_IVRS_number">Please enter IVRS number</string>
    <string name="action">Action</string>
    <string name="delete">Delete?</string>
    <string name="are_you_sure_you_want_to_delete_IVRS">Are you sure you want to delete IVRS</string>
    <string name="please_wait">Please wait....</string>
    <string name="do_not_press_back_button">Please do not close the NICT Bills App or click the back button</string>
    <string name="payment_cancelled">Payment canceled</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="exit">EXIT</string>
    <string name="connecting">Connecting....</string>
    <string name="update_available">Update Available</string>
    <string name="new_update_is_available_on_google_play_store">New update is available on Google Play Store</string>
    <string name="update">Update</string>
    <string name="mobile_number_is_required">Mobile number is required!</string>
    <string name="invalid_mobile_number">Invalid mobile number</string>
    <string name="getting_OTP">Getting OTP....</string>
    <string name="kindly_mentioned_correct_mobile_number">Kindly mentioned the correct mobile number</string>
    <string name="kindly_enter_the_OTP_sent_on_your_mobile_number">Kindly enter the OTP sent on your Mobile Number</string>
    <string name="invalid_OTP">Invalid OTP!</string>
    <string name="resend_OTP_in">Resend OTP in:</string>
    <string name="otp_resend_successfully">OTP resend successfully</string>
    <string name="otp_send_successfully">OTP send successfully</string>
    <string name="otp_verification_failed">OTP verification failed</string>
    <string name="kindly_mentioned_correct_OTP">Kindly mention the correct OTP</string>
    <string name="bill_payment_successful_of_IVRS_number">Bill payment successful of IVRS number</string>
    <string name="bill_payment_failed_of_IVRS_number">Bill payment failed of IVRS number</string>
    <string name="invalid_amount">Invalid Amount</string>
    <string name="pay">PAY</string>
    <string name="kindly_fill_UPI_Id">Kindly fill UPI Id</string>
    <string name="download_done">Download Done</string>
    <string name="select_language">Select Language</string>
    <string name="english" translatable="true">English</string>
    <string name="hindi" translatable="true">हिंदी</string>
    <string name="submit" translatable="true">Submit</string>
    <string name="privacy_policy" translatable="true">Privacy policy</string>
    <string name="about_us" translatable="true">About us</string>
    <string name="app_version" translatable="true">App version</string>
    <string name="dashboard" translatable="true">Dashboard</string>
    <string name="transaction_history" translatable="true">Transactions</string>
    <string name="support" translatable="true">Support</string>
    <string name="help" translatable="true">Help</string>
    <string name="about" translatable="true">About and Help</string>
    <string name="terms_and_conditions" translatable="true">Terms And Conditions</string>
    <string name="language" translatable="true">Language</string>
    <string name="communicate" translatable="true">Communicate</string>
    <string name="share" translatable="true">Share</string>
    <string name="login_or_register" translatable="true">Login or Register</string>
    <string name="mobile_number" translatable="true">Mobile Number</string>
    <string name="alternate_mobile_number" translatable="true">Alternate Mobile Number</string>
    <string name="get_OTP" translatable="true">Get OTP</string>
    <string name="designed_and_developed_by_NICT" translatable="true">Designed and developed by NICT Technologies Pvt. Ltd.</string>
    <string name="almost_done" translatable="true">Almost done !</string>
    <string name="verify" translatable="true">Verify</string>
    <string name="resend_OTP" translatable="true">Resend OTP</string>
    <string name="pay_using" translatable="true">Pay Using</string>
    <string name="payment_details" translatable="true">Payment Details</string>
    <string name="ivrs_no" translatable="true">IVRS no.</string>
    <string name="name" translatable="true">Name</string>
    <string name="amount" translatable="true">Amount</string>
    <string name="upi" translatable="true">UPI</string>
    <string name="no_extra_charges" translatable="true">(No Extra Charges)</string>
    <string name="debit_credit_card_net_banking" translatable="true">Debit/Credit Card/ Net Banking</string>
    <string name="pay_using_UPI_id" translatable="true">PAY USING UPI ID</string>
    <string name="you_will_receive_a_payment_request_on_your_UPI_app" translatable="true">You will receive a payment request on your UPI App</string>
    <string name="upi_id" translatable="true">UPI Id</string>
    <string name="google_pay_BHIM_phonePe_more" translatable="true">Google Pay, BHIM, PhonePe &amp; more</string>
    <string name="enter_your_UPI_ID" translatable="true">Enter your UPI ID</string>
    <string name="pay_using_apps" translatable="true">PAY USING APPS</string>
    <string name="you_will_be_redirected_to_your_UPI_app" translatable="true">You will be redirected to your UPI App</string>
    <string name="payment_status" translatable="true">Payment Status</string>
    <string name="payment_successful" translatable="true">Payment Successful</string>
    <string name="transaction_number" translatable="true">Transaction Number</string>
    <string name="success" translatable="true">Success</string>
    <string name="payment_failed" translatable="true">Payment Failed</string>
    <string name="try_again" translatable="true">Try Again</string>
    <string name="failed" translatable="true">Failed</string>
    <string name="the_transaction_was_pending" translatable="true">The transaction was pending</string>
    <string name="please_contact_us_If_the_amount_has_been_debited_from_your_account" translatable="true">Please contact us, If the amount has been debited from your account.</string>
    <string name="transaction_details" translatable="true">Transaction Details</string>
    <string name="service_details" translatable="true">Service Details</string>
    <string name="ivrs_number" translatable="true">Service Number</string>
    <string name="location" translatable="true">Location</string>
    <string name="service" translatable="true">Service</string>
    <string name="receipt_number" translatable="true">Receipt number</string>
    <string name="order_id" translatable="true">Order Id</string>
    <string name="convenience_fee" translatable="true">Convenience fee</string>
    <string name="date" translatable="true">Date</string>
    <string name="download_invoice" translatable="true">Download Invoice</string>
    <string name="pay_another_bill" translatable="true">Pay Another Bill</string>
    <string name="failed_message" translatable="true">Failed Message</string>
    <string name="payment_pending" translatable="true">Payment Pending</string>
    <string name="payment_method" translatable="true">Payment Method</string>
    <string name="find_IVRS_number" translatable="true">Find IVRS Number</string>
    <string name="add_IVRS" translatable="true">Add IVRS</string>
    <string name="scan_and_pay" translatable="true">Scan And Pay</string>
    <string name="add_more_IVRS" translatable="true">Add More IVRS</string>
    <string name="confirmation" translatable="true">Confirmation</string>
    <string name="email" translatable="true">Email</string>
    <string name="enter_your_email_for_receipt" translatable="true">Enter your email for receipt</string>
    <string name="cancel" translatable="true">Cancel</string>
    <string name="please_accept_the_request_from_NICT_bills_on_your_UPI_App" translatable="true">Please accept the request from NICT bills on your UPI App</string>
    <string name="cancel_payment" translatable="true">Cancel Payment</string>
    <string name="MPPKVVCL_bill" translatable="true">MPPKVVCL Bill</string>
    <string name="electricity_bill" translatable="true">Electricity Bill</string>
    <string name="t_and_c" translatable="true">T &amp; C</string>
    <string name="someting_went_wrong" translatable="true">Something went wrong</string>
    <string name="refer_bill_document_for_IVRS_number" translatable="true">Refer bill document for IVRS number</string>
    <string name="due_date" translatable="true">Due Date</string>
    <string name="pay_now" translatable="true">Pay Now</string>
    <string name="ivrs_added_successfully" translatable="true">IVRS Added Successfully</string>
    <string name="ok" translatable="true">Ok</string>
    <string name="address" translatable="true">Address</string>
    <string name="permission_required" translatable="true">Permission Required</string>
    <string name="allow_all_required_permission_to_access_NICT_Bills" translatable="true">Allow all required permission to access NICT Bills</string>
    <string name="enable_access" translatable="true">Enable Access</string>
    <string name="gender" translatable="true">Gender</string>
    <string name="rewards_points" translatable="true">Reward point</string>
    <string name="age" translatable="true">Age</string>
    <string name="male" translatable="true">Male</string>
    <string name="female">Female</string>
    <string name="add" translatable="true">Add</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="panno" translatable="true">PanNo</string>
    <string name="isleadbus" translatable="true">is LeadPassenger ?</string>
</resources>