<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/curve_bright_colour_layout"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/confirmation"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#2196F3"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="#c0c0c0"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/ivrs_no"
                android:textSize="15dp"/>


            <TextView
                android:id="@+id/selected_ivrs_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ivrs_no."
                android:textColor="#2196F3"
                android:textSize="15dp"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="15dp"/>


            <TextView
                android:id="@+id/selected_name_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textColor="#2196F3"
                android:textSize="15dp"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textSize="15dp"/>


            <TextView
                android:id="@+id/selected_amount_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Amount"
                android:textColor="#2196F3"
                android:textSize="15dp"/>


        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/email"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="#000" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_email_for_receipt"
            android:textColor="#D56E6E"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                />


            <Button
                android:id="@+id/pay_BTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:textColor="#fff"
                android:text="@string/pay"
                android:textStyle="bold"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>