<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/curve_bright_colour_layout"
    android:orientation="vertical">



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_language"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="18dp"
        android:padding="10dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal">



        <RadioGroup
            android:id="@+id/radioLanguage"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:text="@string/english"
                android:textColor="#000"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radioHindi"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:textColor="#000"
                android:text="@string/hindi" />

        </RadioGroup>


    </LinearLayout>



    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/submit"/>


</LinearLayout>

</LinearLayout>