<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/curve_bright_colour_layout"
    android:layout_height="wrap_content">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission_required"
        android:textColor="#000"
        android:textSize="18dp"
        android:padding="10dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textColor="#000"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="5dp"
        android:layout_gravity="center"
        android:text="@string/allow_all_required_permission_to_access_NICT_Bills"/>



    <Button
        android:id="@+id/enable_permission_button"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        app:cornerRadius="30dp"
        android:textSize="16dp"
        android:padding="15dp"
        android:background="#2196F3"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textColor="#fff"
        android:text="@string/enable_access"
        android:textStyle="bold"/>

</LinearLayout>